tui/src/chatwidget/snapshots/estelle_tui__chatwidget__tests__app_server_collab_wait_items_render_history.snap
---
source: tui/src/chatwidget/tests.rs
expression: combined
---
• Waiting for 2 agents
  │ Robie [explorer]
    Ada [reviewer]


• Finished waiting
  │ Robie [explorer]: Completed - Done
    Ada [reviewer]: Running
