tui/src/chatwidget/snapshots/estelle_tui__chatwidget__tests__exploring_step3_start_cat_foo.snap
---
source: tui/src/chatwidget/tests.rs
expression: active_blob(&chat)
---
• Exploring
  │ List ls -la
    Read foo.txt
